--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 Click==7.0
+entrypoints==0.3
+flake8==3.7.8
 Flask==1.1.1
+Flask-CKEditor==0.4.3
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pkg-resources==0.0.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
 SQLAlchemy==1.3.10
 Werkzeug==0.16.0
 WTForms==2.2.1
