--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-pkg-resources==0.0.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
+python-slugify==4.0.0
 SQLAlchemy==1.3.10
+text-unidecode==1.3
 Werkzeug==0.16.0
 WTForms==2.2.1
