--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
+alembic==1.3.0
 Click==7.0
 entrypoints==0.3
 flake8==3.7.8
 Flask==1.1.1
 Flask-CKEditor==0.4.3
+Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
+psycopg2==2.8.4
 pycodestyle==2.5.0
 pyflakes==2.1.1
+python-dateutil==2.8.1
+python-editor==1.0.4
 python-slugify==4.0.0
+six==1.13.0
 SQLAlchemy==1.3.10
 text-unidecode==1.3
 Werkzeug==0.16.0
